fixing alignment issue with search and ads row

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,10 @@ header {
     padding: 20px;
 }
 
+.main-container {
+    display: inline-flex;
+}
+
 #search {
     margin: 20px;
 }
